# Avail-Backend

./: Cargo.toml
migrations/2024-05-13-102613_articles/: up.sql
migrations/2024-05-13-102627_users/: down.sql  up.sql
src/: main.rs
src/database/: article_insertable.rs  insertable.rs  mod.rs  models.rs  schema.rs
src/lib/: db_utils.rs  handler.rs  mod.rs
src/routes/: health_route.rs  mod.rs  services.rs
