[package]
name = "articles"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
